--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- 'nano' theme -->
       </head>
       <body>
-        <nav>Navbar</nav>
+<!--         <nav>Navbar</nav> -->
         <div
         class="main d-flex flex-column justify-content-center align-items-center"
         id="backGround"
