Added nav bar img tag

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <!-- 'nano' theme -->
       </head>
       <body>
-<!--         <nav>Navbar</nav> -->
+        <nav>
+          <img src="" height="144px" width="144px"> 
+        </nav>
         <div
         class="main d-flex flex-column justify-content-center align-items-center"
         id="backGround"
