--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </head>
       <body>
         <nav>
-          <img src="" height="144px" width="144px"> 
+          <img src="logo.png" height="144px" width="144px"> 
         </nav>
         <div
         class="main d-flex flex-column justify-content-center align-items-center"
